woodpecker/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodpecker-server-headless
  namespace: woodpecker
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: woodpecker
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: woodpecker
---
apiVersion: v1
kind: Service
metadata:
  name: woodpecker-server
  namespace: woodpecker
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: woodpecker
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: woodpecker
---
