woodpecker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-server
  namespace: woodpecker
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: woodpecker
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - "woodpecker.skj.dev"
      secretName: woodpecker-skj-dev-tls
  rules:
    - host: "woodpecker.skj.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  number: 80
